Add support for compressing websockets
PR #329 fran6co

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,9 +11,14 @@ set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")
 find_package(Tcmalloc)
 find_package(Threads)
 find_package(OpenSSL)
+find_package(zlib)
 
 if(OPENSSL_FOUND)
 	include_directories(${OPENSSL_INCLUDE_DIR})
+endif()
+if(ZLIB_FOUND)
+	add_definitions(-DHAVE_ZLIB)
+	include_directories(${ZLIB_INCLUDE_DIR})
 endif()
 
 find_program(CCACHE_FOUND ccache)
